# dated-money

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_dmon.py  test_readme_examples.py
docs/: currency_operations_explained.md  real_world_use_case.md
examples/: README.md  analyze_transactions.py  transactions.csv
src/dated_money/: __init__.py  db_serialization.py  money.py  rates.py
src/dmon/: currency.py  logging.py  money.py  rates.py
test/: rebuild_test_db.py  test_currency_errors.py  test_money.py  test_money_errors.py  test_rates.py
test/res/: exchange-rates.db
test/res/money/: 2023-10-20-rates.json
utils/: try_readme_examples.py
