[project]
name = "dated-money"
version = "1.0.2"
description = "Compute with dated monetary values."
readme = "README.md"
authors = [
    { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.9.0.post0",
    "supabase>=2.11.0",
    "python-dotenv>=1.0.1"
]

[project.urls]
Homepage = "https://github.com/juanre/dmon"
Repository = "https://github.com/juanre/dmon"

[project.scripts]
dmon = "dmon:main"
dmon-rates = "dmon.rates:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmon"]


[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=setup.py --ignore=build --ignore=doc --ignore=flymake"
pythonpath = ["."]

[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311", "py312", "py313"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by black)
    "F401", # imported but unused (we handle with __all__)
    "N802", # function name should be lowercase (Money is a factory)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 99
